2A/05_Projet_GL/src/test/deca/syntax/valid/HelloWorld/08_println.deca
// Description:
//    Programme avec println simple.
//
// Resultats:
//    Un print 
//
// Historique:
//    cree le 20/12/2023

{
    println("Un print");
}